# vocence-sdk

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/workflows/: publish.yml  test.yml
python/: CHANGELOG.md  README.md  pyproject.toml
python/examples/: 01_speak_with_builtin_voice.py  02_clone_voice_from_clip.py  03_transcribe_and_reply.py  04_voice_agent_ws.py  05_voice_design.py  06_conversation.py  07_live_chat.py
python/src/vocence/: __init__.py  _audio.py  _errors.py  _http.py  _live.py  _streaming.py  _streaming_sync.py  _stt_stream.py  _tts_stream.py  batch.py  client.py  conversation.py  errors.py  webhooks.py
python/src/vocence/cli/: __init__.py  config.py  main.py
python/src/vocence/cli/commands/: __init__.py  _common.py  account.py  agents.py  auth.py  chat.py  clone.py  config.py  design.py  keys.py  usage.py  voices.py
python/src/vocence/resources/: __init__.py  account.py  agent_tools.py  agents.py  embed_tokens.py  feedback.py  knowledge.py  stt.py  tts.py  voice_clone.py  voice_design.py  voices.py
python/src/vocence/types/: __init__.py  _audio_mixin.py  account.py  agent.py  response.py  tool.py  voice.py
python/tests/: conftest.py  test_account.py  test_agents.py  test_audio.py  test_audio_helpers.py  test_embed_tokens.py  test_errors.py  test_key_resolution.py  test_knowledge.py  test_retries.py  test_security.py  test_streaming_voice.py  test_stt.py  test_tts.py  test_usage.py  test_v04.py  test_voices.py
