[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vocence"
dynamic = ["version"]
description = "Official Python SDK for the Vocence Developer API — TTS, STT, voice cloning, voice design, and real-time voice agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Vocence", email = "space@vocence.ai" }]
keywords = ["vocence", "tts", "stt", "voice-cloning", "voice-design", "bittensor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.12",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Pull these for `Turn.play()`, `AudioFrame.play()`, and the
# microphone-aware live-chat helpers. Without this extra the SDK still
# works for REST + WebSocket — only audio playback / capture is gated.
audio = [
    "sounddevice>=0.4",
    "numpy>=1.24",
]
# Store the CLI's API key in the OS keychain (macOS Keychain, Windows
# Credential Locker, freedesktop Secret Service) instead of a flat file.
keyring = [
    "keyring>=24",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://vocence.ai"
Documentation = "https://vocence.ai/docs/api"
Repository = "https://github.com/concil859856/vocence-sdk"
Changelog = "https://github.com/concil859856/vocence-sdk/blob/master/python/CHANGELOG.md"

[project.scripts]
vocence = "vocence.cli.main:app"

[tool.hatch.version]
path = "src/vocence/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vocence"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "CHANGELOG.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Typer requires `Argument(...)`/`Option(...)` as default-value sentinels —
# that pattern trips B008 (function call in default) but is canonical.
"src/vocence/cli/**" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
